[gd_scene load_steps=48 format=3 uid="uid://dy68hj3whu165"]

[ext_resource type="Texture2D" uid="uid://n0bml4kpmbgd" path="res://sprites/characters/npc/clara/world2_clara_body.png" id="1_351dk"]
[ext_resource type="Script" uid="uid://csvkoo3pdnec4" path="res://scenes/characters/npc/clerk_clara.gd" id="1_bjvlf"]
[ext_resource type="Texture2D" uid="uid://b23tapkfipigj" path="res://sprites/characters/npc/clara/world2_clara_face_happy.png" id="2_13hlu"]
[ext_resource type="Texture2D" uid="uid://fpyltx28xhxs" path="res://sprites/characters/npc/clara/world2_clara_face_talk_happy_01.png" id="3_0h4a4"]
[ext_resource type="Texture2D" uid="uid://cir1eun5i6u0p" path="res://sprites/characters/npc/clara/world2_clara_face_talk_happy_02.png" id="4_ka366"]
[ext_resource type="Texture2D" uid="uid://d3y3exoeashwl" path="res://sprites/characters/npc/clara/world2_clara_face_normal.png" id="5_y5b43"]
[ext_resource type="Texture2D" uid="uid://d4kixfd68bf11" path="res://sprites/characters/npc/clara/world2_clara_face_talk_01.png" id="6_gg52s"]
[ext_resource type="Texture2D" uid="uid://bcwe4rxsnkjww" path="res://sprites/characters/npc/clara/world2_clara_face_talk_02.png" id="7_gsoe5"]
[ext_resource type="Texture2D" uid="uid://da0xkpbse4m5v" path="res://sprites/characters/npc/clara/world2_clara_face_problem.png" id="8_pqdph"]
[ext_resource type="Texture2D" uid="uid://ckxsnpgojr7dk" path="res://sprites/characters/npc/clara/world2_clara_face_talk_problem_01.png" id="9_3gr4x"]
[ext_resource type="Texture2D" uid="uid://c66sd7n0mojp7" path="res://sprites/characters/npc/clara/world2_clara_face_talk_problem_02.png" id="10_57kxv"]
[ext_resource type="Texture2D" uid="uid://iqhh1a6m4quu" path="res://sprites/characters/npc/clara/world2_clara_face_sad.png" id="11_6pbx6"]
[ext_resource type="Texture2D" uid="uid://bcaf3fcaf4x85" path="res://sprites/characters/npc/clara/world2_clara_face_talk_sad_02.png" id="12_jf53n"]
[ext_resource type="Texture2D" uid="uid://d3wun357iua38" path="res://sprites/characters/npc/clara/world2_clara_face_talk_sad_01.png" id="13_va1i7"]
[ext_resource type="Texture2D" uid="uid://cat5tbrqas3r" path="res://sprites/characters/npc/clara/world2_clara_face_talk_sad_03.png" id="14_0dcbc"]
[ext_resource type="Texture2D" uid="uid://be5ei0jinv0gi" path="res://sprites/characters/npc/clara/world2_clara_hand.png" id="14_1veqi"]
[ext_resource type="Texture2D" uid="uid://ci42bk2jsigxh" path="res://sprites/characters/npc/clara/world2_clara_hand_open.png" id="15_4wext"]
[ext_resource type="AudioStream" uid="uid://cdeyamtg57xet" path="res://sfx/characters/npc/clara/sfx_clara_speak01.ogg" id="16_xte6l"]
[ext_resource type="AudioStream" uid="uid://der5exoy2sdc1" path="res://sfx/characters/npc/clara/sfx_clara_speak02.ogg" id="17_0dcbc"]
[ext_resource type="AudioStream" uid="uid://c7vk2gdja4stl" path="res://sfx/characters/npc/clara/sfx_clara_speak11.ogg" id="18_bjvlf"]
[ext_resource type="AudioStream" uid="uid://bx45oki7iuew0" path="res://sfx/characters/npc/clara/sfx_clara_speak12.ogg" id="19_bxhac"]
[ext_resource type="AudioStream" uid="uid://barntu37xoprh" path="res://sfx/characters/npc/clara/sfx_clara_speak03.ogg" id="20_seklw"]
[ext_resource type="AudioStream" uid="uid://dlqpspkk3dbk6" path="res://sfx/characters/npc/clara/sfx_clara_speak04.ogg" id="21_rq3sx"]
[ext_resource type="AudioStream" uid="uid://dyitkqpoysrih" path="res://sfx/characters/npc/clara/sfx_clara_speak05.ogg" id="22_8ebib"]
[ext_resource type="AudioStream" uid="uid://bt7vlnt5p1ooe" path="res://sfx/characters/npc/clara/sfx_clara_speak06.ogg" id="23_yajhi"]
[ext_resource type="AudioStream" uid="uid://dv50130hnt3kt" path="res://sfx/characters/npc/clara/sfx_clara_speak07.ogg" id="24_5ta56"]
[ext_resource type="AudioStream" uid="uid://dd8tichtowjo" path="res://sfx/characters/npc/clara/sfx_clara_speak08.ogg" id="25_7ybyk"]
[ext_resource type="AudioStream" uid="uid://dmk6m81sy788g" path="res://sfx/characters/npc/clara/sfx_clara_speak09.ogg" id="26_y1ycu"]
[ext_resource type="AudioStream" uid="uid://bg6grq1qu8rxb" path="res://sfx/characters/npc/clara/sfx_clara_speak10.ogg" id="27_oxlyp"]
[ext_resource type="AudioStream" uid="uid://dyrnof78fnlgi" path="res://sfx/characters/npc/clara/sfx_clara_speak_sad01.ogg" id="28_x8fx1"]
[ext_resource type="AudioStream" uid="uid://da2olxxn5em5s" path="res://sfx/characters/npc/clara/sfx_clara_speak_sad02.ogg" id="29_kh4ww"]
[ext_resource type="AudioStream" uid="uid://bk2tlxjn7k0hn" path="res://sfx/characters/npc/clara/sfx_clara_yippe.ogg" id="30_seklw"]
[ext_resource type="AudioStream" uid="uid://kyh3au0f2hq6" path="res://sfx/characters/npc/clara/sfx_clara_speak_sad03.ogg" id="30_yuccw"]
[ext_resource type="AudioStream" uid="uid://j2qc3l8f2paa" path="res://sfx/characters/npc/clara/sfx_clara_speak_sad04.ogg" id="31_3h8rg"]
[ext_resource type="AudioStream" uid="uid://b68kgjl1qq3gr" path="res://sfx/gameplay/common/sfx_puzzleclear_clara.ogg" id="35_rq3sx"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ry7rd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_13hlu")
}],
"loop": true,
"name": &"happy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_0h4a4")
}, {
"duration": 1.0,
"texture": ExtResource("4_ka366")
}, {
"duration": 1.0,
"texture": ExtResource("3_0h4a4")
}, {
"duration": 1.0,
"texture": ExtResource("2_13hlu")
}],
"loop": true,
"name": &"happy_talk",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_y5b43")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_gg52s")
}, {
"duration": 1.0,
"texture": ExtResource("7_gsoe5")
}, {
"duration": 1.0,
"texture": ExtResource("6_gg52s")
}, {
"duration": 1.0,
"texture": ExtResource("5_y5b43")
}],
"loop": true,
"name": &"normal_talk",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_pqdph")
}],
"loop": true,
"name": &"problem",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_3gr4x")
}, {
"duration": 1.0,
"texture": ExtResource("10_57kxv")
}, {
"duration": 1.0,
"texture": ExtResource("9_3gr4x")
}, {
"duration": 1.0,
"texture": ExtResource("8_pqdph")
}],
"loop": true,
"name": &"problem_talk",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_6pbx6")
}],
"loop": true,
"name": &"sad",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_jf53n")
}, {
"duration": 1.0,
"texture": ExtResource("13_va1i7")
}, {
"duration": 1.0,
"texture": ExtResource("12_jf53n")
}, {
"duration": 1.0,
"texture": ExtResource("14_0dcbc")
}],
"loop": true,
"name": &"sad_talk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6yqq6"]
size = Vector2(170, 628)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_fkr1u"]
streams_count = 12
stream_0/stream = ExtResource("16_xte6l")
stream_1/stream = ExtResource("17_0dcbc")
stream_2/stream = ExtResource("20_seklw")
stream_3/stream = ExtResource("21_rq3sx")
stream_4/stream = ExtResource("22_8ebib")
stream_5/stream = ExtResource("23_yajhi")
stream_6/stream = ExtResource("24_5ta56")
stream_7/stream = ExtResource("25_7ybyk")
stream_8/stream = ExtResource("26_y1ycu")
stream_9/stream = ExtResource("27_oxlyp")
stream_10/stream = ExtResource("18_bjvlf")
stream_11/stream = ExtResource("19_bxhac")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_lbmk4"]
streams_count = 4
stream_0/stream = ExtResource("28_x8fx1")
stream_1/stream = ExtResource("29_kh4ww")
stream_2/stream = ExtResource("30_yuccw")
stream_3/stream = ExtResource("31_3h8rg")

[sub_resource type="Animation" id="Animation_0dcbc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_xte6l"]
resource_name = "idle"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.5, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.9), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_bjvlf"]
resource_name = "talk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.075), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8ebib"]
resource_name = "yippe"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.225313, 3.13834),
"update": 0,
"values": [Vector2(1, 1.125), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bxhac"]
_data = {
&"RESET": SubResource("Animation_0dcbc"),
&"idle": SubResource("Animation_xte6l"),
&"talk": SubResource("Animation_bjvlf"),
&"yippe": SubResource("Animation_8ebib")
}

[sub_resource type="Animation" id="Animation_rq3sx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_seklw"]
resource_name = "slide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.210224, 4),
"update": 0,
"values": [Vector2(0, 0), Vector2(158.985, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8ebib"]
_data = {
&"RESET": SubResource("Animation_rq3sx"),
&"slide": SubResource("Animation_seklw")
}

[node name="ClerkClara" type="AnimatableBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_bjvlf")

[node name="Body" type="Sprite2D" parent="."]
texture = ExtResource("1_351dk")

[node name="Face" type="AnimatedSprite2D" parent="Body"]
position = Vector2(-23, -194)
sprite_frames = SubResource("SpriteFrames_ry7rd")
animation = &"happy"
autoplay = "normal"

[node name="Hand" type="Sprite2D" parent="Body"]
position = Vector2(-31, -16)
texture = ExtResource("14_1veqi")

[node name="Hand_Open" type="Sprite2D" parent="Body"]
visible = false
position = Vector2(-108, -84)
texture = ExtResource("15_4wext")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_6yqq6")

[node name="Voices" type="Node2D" parent="."]

[node name="ClaraSpeak" type="AudioStreamPlayer2D" parent="Voices"]
stream = SubResource("AudioStreamRandomizer_fkr1u")
volume_db = 5.943
bus = &"voices"

[node name="ClaraYippe" type="AudioStreamPlayer2D" parent="Voices"]
stream = ExtResource("30_seklw")
volume_db = 5.943
bus = &"voices"

[node name="ClaraSpeak_Sad" type="AudioStreamPlayer2D" parent="Voices"]
stream = SubResource("AudioStreamRandomizer_lbmk4")
volume_db = 5.943
bus = &"voices"

[node name="SFX" type="Node2D" parent="."]

[node name="Success" type="AudioStreamPlayer2D" parent="SFX"]
stream = ExtResource("35_rq3sx")
volume_db = 11.346
bus = &"sfx"

[node name="ClaraAnim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bxhac")
}
autoplay = "idle"

[node name="ClaraSlide" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8ebib")
}

[node name="TalkTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="TalkTimer" to="." method="_on_talk_timer_timeout"]
